force-app/main/default/objects/ANI_Routing_Record__c/ANI_Routing_Record__c.object-meta.xml
<CustomObject>
    <description>The ANI routing logic for the Cisco application.</description>
    <label>Routing Record</label>
    <nameField>
        <displayFormat>RR-{000000000}</displayFormat>
        <label>Routing Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>