force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_Contact__c.field-meta.xml
<CustomField>
    <fullName>ANI_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A contact can either be an individual at an external account or a Veritiv primary sales rep. This field is a lookup to a contact record.</description>
    <inlineHelpText>Who is the inbound caller whose calls need to be routed?</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ANI Routing Records</relationshipLabel>
    <relationshipName>Routing_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>