force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_CSP_Primary_RR__c.field-meta.xml
<CustomField>
    <fullName>ANI_CSP_Primary_RR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSP routing is determined based on contact and DID number. The primary CSP is the first option to handle that call.</description>
    <inlineHelpText>Whom is the first option for fielding this contact&apos;s call?</inlineHelpText>
    <label>ANI Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>