force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_CSP_Secondary_RR__c.field-meta.xml
<CustomField>
    <fullName>ANI_CSP_Secondary_RR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSP routing is determined based on contact and DID number. The secondary CSP is the second option to handle that call.</description>
    <inlineHelpText>Whom is the second option for fielding this contact&apos;s call?</inlineHelpText>
    <label>ANI Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routing_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>