force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_CSP_Tertiary_RR__c.field-meta.xml
<CustomField>
    <fullName>ANI_CSP_Tertiary_RR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSP routing is determined based on contact and DID number. The teriary CSP is the third option to handle that call.</description>
    <inlineHelpText>Whom is the first option for fielding this contact&apos;s call?</inlineHelpText>
    <label>ANI Tertiary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routing_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>