force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_DID_Map__c.field-meta.xml
<CustomField>
    <fullName>ANI_DID_Map__c</fullName>
    <description>This is a formula text field that grabs the DID Number from the corresponding TFN record, which allows inbound calls to be routed.</description>
    <formula>ANI_Toll_Free_Map_Number__r.ANI_DID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number feeds the Cisco Application to route calls.</inlineHelpText>
    <label>DID Number</label>
    <type>Text</type>
</CustomField>