force-app/main/default/objects/ANI_Routing_Record__c/fields/ANI_Toll_Free_Map_Number__c.field-meta.xml
<CustomField>
    <fullName>ANI_Toll_Free_Map_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the TFN_Mapping object. Records of that object have a name (the TFN) and a DID Number. This field exists to feed the DID Number to the Routing Record.</description>
    <inlineHelpText>Select a Toll-Free Number. If a contact dials this phone number, the call should be managed by the corresponding CSP.</inlineHelpText>
    <label>Toll-Free-Number</label>
    <referenceTo>ANI_TFN_Mapping__c</referenceTo>
    <relationshipLabel>Routing Records</relationshipLabel>
    <relationshipName>Routing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>