force-app/main/default/objects/ANI_Routing_Record__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <description>Customer Service for Email Routing CEI</description>
    <formula>ANI_Contact__r.Email</formula>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>