force-app/main/default/objects/ANI_Routing_Record__c/fields/Email_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Address__c</fullName>
    <description>Specific Email To Address</description>
    <inlineHelpText>Use the email address the customer will be sending the email</inlineHelpText>
    <label>To: Email Address</label>
    <type>Email</type>
</CustomField>