force-app/main/default/objects/ANI_Routing_Record__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Tracks when Inactive__c is checked.</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>