force-app/main/default/objects/ANI_Routing_Record__c/recordTypes/Routing_Record_Lightning.recordType-meta.xml
<RecordType>
    <fullName>Routing_Record_Lightning</fullName>
    <active>true</active>
    <label>Routing Record - Lightning</label>
</RecordType>