force-app/main/default/objects/ANI_Routing_Record__c/validationRules/Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Required</fullName>
    <active>true</active>
    <description>This validation rule ensures no routing records are dataloaded without a contact lookup</description>
    <errorConditionFormula>ISBLANK( ANI_Contact__c )</errorConditionFormula>
    <errorMessage>You must insert a value in the Contact field.</errorMessage>
</ValidationRule>