force-app/main/default/objects/ANI_Routing_Record__c/listViews/All_Routing_Records.listView-meta.xml
<ListView>
    <fullName>All_Routing_Records</fullName>
    <columns>NAME</columns>
    <columns>ANI_Contact__c</columns>
    <columns>ANI_CSP_Primary_RR__c</columns>
    <columns>ANI_CSP_Secondary_RR__c</columns>
    <columns>ANI_CSP_Tertiary_RR__c</columns>
    <columns>ANI_DID_Map__c</columns>
    <columns>ANI_Toll_Free_Map_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Routing Records</label>
    <language>en_US</language>
</ListView>